[package]
name = "graphql-ws"
version = "0.2.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"

[dependencies]
tokio-tungstenite = { version = "0.13", features = ["tls"] }
tokio = { version = "1", features = ["io-util", "sync"], default-features = false }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
futures-util = { version = "0.3" }
tracing = "*"
async-stream = "*"
# Trick it to be vendored.
openssl-sys = { version = "*", features = ["vendored"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
env_logger = "*"
tracing-subscriber = { version = "*", features = ["fmt"] }
chrono = { version = "0.4", features = ["serde"] }